--- a/tests-example/pom.xml
+++ b/tests-example/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
         </dependency>
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>4.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
